*** Release 0.23	- Wed 02 Jan 2008 <h.m.brand@xs4all.nl>

    - Added tgzdist make target
    - Slightly changed the cover make target

*** Release 0.22	- Wed 02 Jan 2008 <h.m.brand@xs4all.nl>

    - Tk::Clock is now under git
    - Upped copyright to 2008
    - Added complete prereq list to Makefile.PL

*** Release 0.21	- Fri 09 Nov 2007 <h.m.brand@xs4all.nl>

    - Added tickDiff attribute for width-diff of the ticks
    - Added handCenter attribute (see examples/station.pl)
    - Added examples/station.pl (Stations klok)
    - Added countDown attribute and examples/countdown.pl
    - Fixed auto-resize for clocks with digital disabled
    - Tested with Tk-804.027_501+

*** Release 0.20	- Tue 08 Oct 2007 <h.m.brand@xs4all.nl>

    - Added a 7-clocks wide example/world.pl
    - And fixed the Time Zones in world.pl
    - Raised requirement to 5.006, as I use our and recent Tk builds
      require 5.007

*** Release 0.19	- Tue 08 May 2007 <h.m.brand@xs4all.nl>

    - LICENSE entry for MakeMaker only for newer versions
    - Updated plans/TODO
    - Updated Copyrights
    - Moved pod to bottom
    - Added timeZone support!
    - Split up tests
    - Loosened up the dateFormat and timeFormat attributes to
      allow fixed text. Needs documentation!
    - Added a test with three clocks side-by-side with different TZ's

*** Release 0.18	- Fri 27 Apr 2007 <h.m.brand@xs4all.nl>

    - Added cover make target
    - Added auto-resize test. Still depends on user doing the resize
    - Increased coverage. More coverage is doable, but it'll be a
      booooring job to wait for the tests to finish

*** Release 0.17	- Thu 16 Nov 2006 <h.m.brand@xs4all.nl>

    - Missed one '.' in the format change (K.Wittrock)
    - secsColor was missed in config attrib handling
    - allow both -secsColor and secsColor

*** Release 0.16	- Tue 17 Oct 2006 <h.m.brand@xs4all.nl>

    - Default format for time HH.MM:SS => HH:MM:SS (wish K.Wittrock)